yyamamoto+sesetup@salesforce.com/src/objects/CustomObject2__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>見積ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未発行</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>発行済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>案件</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>見積作成日時</label>
        <type>DateTime</type>
    </fields>
    <label>見積り</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>E{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>見積番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>